--- a/main.html
+++ b/main.html
@@ -5,9 +5,23 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<style>
+	#btn{
+		background-color:black;
+		border-radius:5px;
+		border:none;
+		color:white;
+		
+	}
+	#btn:hover{
+		background-color:yellow;
+		border-radius:30px
+		color:black;
+	}
+</style>
 <body>
 	<!-- the entire body must be written by student -->
+	<button id="btn" type="submit">Only plain text without any additional tags inside the button</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
